<resources>
    <string name="app_name">Locality</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="label_signin">Sign In</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="label_existing_account">Already have an account?</string>
    <string name="label_new_user">Create a new account?</string>
    <string name="label_create_new_user">Create new account</string>
    <string name="label_signup">Signup</string>
</resources>
