<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@drawable/splash_background">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="30dp"
            android:layout_marginRight="@dimen/margin_normal"
            android:orientation="vertical">


        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="444dp"
                    android:background="@drawable/round_rect_bg"/>


            <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/auth_form_margin"
                    android:layout_marginEnd="@dimen/auth_form_margin">


                <com.jay.commons.widget.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="57.7dp"
                        android:text="@string/label_create_new_user"
                        android:textAllCaps="false"
                        app:textFontStyle="@integer/poppins_font_bold"
                        android:textColor="@color/title_color"
                        android:textSize="@dimen/subtitle_text_size"/>

                <com.jay.commons.widget.AppTextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        app:textFontStyle="@integer/poppins_font_regular"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/regular_text_size">


                    <com.jay.commons.widget.AppEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@android:color/transparent"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            app:textFontStyle="@integer/poppins_font_bold"
                            android:hint="@string/email_hint"
                            android:textColor="#0E0E0E"
                            android:paddingTop="5dp"
                            android:textCursorDrawable="@drawable/grey_cursor_color"
                            android:textSize="15sp"/>
                </com.jay.commons.widget.AppTextInputLayout>

                <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="6.3dp"
                        android:layout_marginRight="44.3dp"
                        android:background="#d5d5d5"/>


                <com.jay.commons.widget.AppTextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30.3dp"
                        app:textFontStyle="@integer/poppins_font_regular"
                        android:textColor="#0e0e0e"
                        android:textSize="13sp">

                    <com.jay.commons.widget.ShowHidePasswordEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@android:color/transparent"
                            android:maxLength="10"
                            app:tint_color="#d5d5d5"
                            android:paddingTop="5dp"
                            android:maxLines="1"
                            app:textFontStyle="@integer/poppins_font_regular"
                            android:textColor="#0E0E0E"
                            android:hint="@string/password_hint"
                            android:textCursorDrawable="@drawable/grey_cursor_color"
                            android:textSize="15sp"/>
                </com.jay.commons.widget.AppTextInputLayout>

                <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="6.3dp"
                        android:layout_marginRight="44.3dp"
                        android:background="#d5d5d5"/>
            </LinearLayout>
            <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:background="@drawable/round_cornor_button"
                    android:textColor="@color/colorWhite"
                    android:text="@string/label_signup"
                    android:textAllCaps="false"
                    android:paddingTop="@dimen/buttonPadding"
                    android:paddingBottom="@dimen/buttonPadding"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/register_button_bottom_padding"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:orientation="horizontal">

        <com.jay.commons.widget.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:fontStyle="@integer/poppins_font_regular"
                android:text="@string/label_existing_account"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"/>

        <com.jay.commons.widget.AppTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                app:textFontStyle="@integer/poppins_font_semi_bold"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:padding="@dimen/margin_normal"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"/>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>